--- a/package.json
+++ b/package.json
@@ -26,17 +26,22 @@
     "react": "18.1.0",
     "react-native": "0.70.6",
     "react-native-calendars": "^1.1292.0",
+    "react-native-camera": "^4.2.1",
     "react-native-confirmation-code-field": "^7.3.1",
     "react-native-deck-swiper": "^2.0.12",
     "react-native-gesture-handler": "^2.9.0",
     "react-native-gifted-chat": "^1.0.4",
+    "react-native-google-places-autocomplete": "^2.5.1",
     "react-native-image-picker": "^5.0.0",
     "react-native-maps": "^1.3.2",
+    "react-native-maps-directions": "^1.9.0",
     "react-native-modal-datetime-picker": "^14.0.1",
     "react-native-pager-view": "^6.1.2",
     "react-native-paper": "^5.0.0-rc.10",
+    "react-native-permissions": "^3.6.1",
     "react-native-phone-number-input": "^2.1.0",
     "react-native-popup-dialog": "^0.18.3",
+    "react-native-qrcode-scanner": "^1.5.5",
     "react-native-reanimated": "^2.14.4",
     "react-native-safe-area-context": "^4.4.1",
     "react-native-screens": "^3.18.2",
