--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@react-navigation/native": "^6.0.16",
     "@react-navigation/native-stack": "^6.9.4",
     "@reduxjs/toolkit": "^1.9.1",
+    "deprecated-react-native-prop-types": "^2.2.0",
     "react": "18.1.0",
     "react-native": "0.70.6",
     "react-native-calendars": "^1.1292.0",
@@ -42,14 +43,17 @@
     "react-native-phone-number-input": "^2.1.0",
     "react-native-popup-dialog": "^0.18.3",
     "react-native-qrcode-scanner": "^1.5.5",
+    "react-native-qrcode-svg": "^6.2.0",
     "react-native-reanimated": "^2.14.4",
     "react-native-safe-area-context": "^4.4.1",
     "react-native-screens": "^3.18.2",
     "react-native-simple-radio-button": "^2.7.4",
+    "react-native-svg": "^13.8.0",
     "react-native-tab-view": "^3.3.4",
     "react-native-vector-icons": "^9.2.0",
     "react-redux": "^8.0.5",
     "redux": "^4.2.0",
+    "rn-qr-generator": "^1.2.1",
     "sharingan-rn-modal-dropdown": "^1.4.0",
     "styled-components": "^5.3.6"
   },
