--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-native-gifted-chat": "^1.0.4",
     "react-native-google-places-autocomplete": "^2.5.1",
     "react-native-image-picker": "^5.0.0",
+    "react-native-map-link": "^2.10.2",
     "react-native-maps": "^1.3.2",
     "react-native-maps-directions": "^1.9.0",
     "react-native-modal-datetime-picker": "^14.0.1",
@@ -47,6 +48,7 @@
     "react-native-reanimated": "^2.14.4",
     "react-native-safe-area-context": "^4.4.1",
     "react-native-screens": "^3.18.2",
+    "react-native-share": "^8.2.1",
     "react-native-simple-radio-button": "^2.7.4",
     "react-native-svg": "^13.8.0",
     "react-native-tab-view": "^3.3.4",
