--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.17.11",
+    "@react-native-community/blur": "^4.3.0",
     "@react-native-community/datetimepicker": "^6.7.3",
     "@react-native-community/geolocation": "^3.0.5",
     "@react-native-community/slider": "^4.4.2",
@@ -33,6 +34,7 @@
     "react-native-camera": "^4.2.1",
     "react-native-confirmation-code-field": "^7.3.1",
     "react-native-deck-swiper": "^2.0.12",
+    "react-native-geocoding": "^0.5.0",
     "react-native-gesture-handler": "^2.9.0",
     "react-native-gifted-chat": "^1.0.4",
     "react-native-google-places-autocomplete": "^2.5.1",
