--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@react-native-firebase/app": "^16.5.0",
     "@react-native-firebase/auth": "^16.5.0",
     "@react-native-firebase/firestore": "^16.5.0",
+    "@react-native-firebase/messaging": "^17.4.2",
     "@react-native-firebase/storage": "^16.5.0",
     "@react-native-google-signin/google-signin": "^9.0.2",
     "@react-native-picker/picker": "^2.4.8",
@@ -26,6 +27,7 @@
     "@react-navigation/native": "^6.0.16",
     "@react-navigation/native-stack": "^6.9.4",
     "@reduxjs/toolkit": "^1.9.1",
+    "axios": "^1.3.5",
     "deprecated-react-native-prop-types": "^2.2.0",
     "geolib": "^3.3.3",
     "react": "18.1.0",
@@ -56,6 +58,7 @@
     "react-native-share": "^8.2.1",
     "react-native-simple-radio-button": "^2.7.4",
     "react-native-svg": "^13.8.0",
+    "react-native-svg-uri": "^1.2.3",
     "react-native-tab-view": "^3.3.4",
     "react-native-vector-icons": "^9.2.0",
     "react-redux": "^8.0.5",
