--- a/package.json
+++ b/package.json
@@ -11,15 +11,16 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.17.11",
+    "@react-native-community/art": "^1.2.0",
     "@react-native-community/blur": "^4.3.0",
     "@react-native-community/datetimepicker": "^6.7.3",
     "@react-native-community/geolocation": "^3.0.5",
     "@react-native-community/slider": "^4.4.2",
-    "@react-native-firebase/app": "^16.5.0",
-    "@react-native-firebase/auth": "^16.5.0",
-    "@react-native-firebase/firestore": "^16.5.0",
+    "@react-native-firebase/app": "^16.7.0",
+    "@react-native-firebase/auth": "^16.7.0",
+    "@react-native-firebase/firestore": "^16.7.0",
     "@react-native-firebase/messaging": "^17.4.2",
-    "@react-native-firebase/storage": "^16.5.0",
+    "@react-native-firebase/storage": "^16.7.0",
     "@react-native-google-signin/google-signin": "^9.0.2",
     "@react-native-picker/picker": "^2.4.8",
     "@react-navigation/bottom-tabs": "^6.5.0",
@@ -31,9 +32,11 @@
     "deprecated-react-native-prop-types": "^2.2.0",
     "geolib": "^3.3.3",
     "react": "18.1.0",
+    "react-circular-progressbar": "^2.1.0",
     "react-native": "0.70.6",
     "react-native-calendars": "^1.1292.0",
     "react-native-camera": "^4.2.1",
+    "react-native-chart-kit": "^6.12.0",
     "react-native-confirmation-code-field": "^7.3.1",
     "react-native-deck-swiper": "^2.0.12",
     "react-native-geocoding": "^0.5.0",
@@ -49,6 +52,7 @@
     "react-native-paper": "^5.0.0-rc.10",
     "react-native-permissions": "^3.6.1",
     "react-native-phone-number-input": "^2.1.0",
+    "react-native-pie": "^1.1.2",
     "react-native-popup-dialog": "^0.18.3",
     "react-native-qrcode-scanner": "^1.5.5",
     "react-native-qrcode-svg": "^6.2.0",
