--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "react-native-svg-uri": "^1.2.3",
     "react-native-tab-view": "^3.3.4",
     "react-native-vector-icons": "^9.2.0",
+    "react-progressbar-semicircle": "^1.2.1",
     "react-redux": "^8.0.5",
     "redux": "^4.2.0",
     "rn-qr-generator": "^1.2.1",
