--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-native-community/blur": "^4.3.0",
     "@react-native-community/datetimepicker": "^6.7.3",
     "@react-native-community/geolocation": "^3.0.5",
+    "@react-native-community/netinfo": "^9.3.10",
     "@react-native-community/slider": "^4.4.2",
     "@react-native-firebase/app": "^16.7.0",
     "@react-native-firebase/auth": "^16.7.0",
